Fix content spacing on the mobile version
Closes #99

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -174,13 +174,6 @@ article {
   }
 }
 
-@media (max-width: 768px) {
-  .grid--full {
-    margin-left: -20px;
-    margin-right: -20px;
-  }
-}
-
 /* Container element */
 .container {
   margin: 0 auto;
